# LeagueOfLegends

server/: Cargo.toml  diesel.toml
server/api-tests/: mission-test.http
server/src/: main.rs
server/src/application/use_cases/: authentication.rs  brawlers.rs  crew_operation.rs
server/src/config/: config_loader.rs  config_model.rs
server/src/domain/entities/: brawlers.rs
server/src/domain/repositories/: brawlers.rs
server/src/domain/value_objects/: base64_img.rs  brawler_model.rs  mod.rs  uploaded_img.rs
server/src/infrastructure/: mod.rs
server/src/infrastructure/cloudinary/: mod.rs
server/src/infrastructure/database/: mod.rs  postgresql_connection.rs  schema.rs
server/src/infrastructure/database/migrations/2025-11-20-064213-0000_init_db/: down.sql  up.sql
server/src/infrastructure/database/migrations/2025-12-25-075523-0000_add_display_name_and_avatar_url_to_brawlers/: down.sql  up.sql
server/src/infrastructure/database/repositories/: brawlers.rs
server/src/infrastructure/http/: http_serv.rs  mod.rs
server/src/infrastructure/http/middlewares/: auth.rs
server/src/infrastructure/http/routers/: brawlers.rs  default_router.rs  mission_operation.rs  mission_viewing.rs  mod.rs
server/src/infrastructure/jwt/: jwt_model.rs
